[gd_scene load_steps=15 format=2]

[ext_resource path="res://Create_Join_Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/styles_and_fonts/patinterio.tres" type="Theme" id=2]
[ext_resource path="res://Assets/buttonleft.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttonright.png" type="Texture" id=4]
[ext_resource path="res://Assets/styles_and_fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/styles_and_fonts/patinteriowindow.tres" type="Theme" id=6]
[ext_resource path="res://NetworkScript.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 0.4, 0, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.529412, 0.803922, 0.870588, 1 )

[sub_resource type="DynamicFont" id=14]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.529412, 0.803922, 0.870588, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.529412, 0.803922, 0.870588, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0.8, 0, 1 )

[node name="Create_Join_Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_left = 64.1
margin_top = 2.0
margin_right = 164.1
margin_bottom = 32.0
rect_min_size = Vector2( 100, 25 )
theme = ExtResource( 2 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_buttons" type="VBoxContainer" parent="center_menu"]
margin_left = 666.0
margin_top = 317.0
margin_right = 866.0
margin_bottom = 545.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 15

[node name="player_name_prompt" type="Label" parent="center_menu/menu_buttons"]
margin_right = 200.0
margin_bottom = 18.0
text = "Your Name"
align = 1

[node name="player_name_input" type="LineEdit" parent="center_menu/menu_buttons"]
margin_top = 33.0
margin_right = 200.0
margin_bottom = 51.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Pat Interio"
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby_name_prompt" type="Label" parent="center_menu/menu_buttons"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 84.0
text = "Lobby Name"
align = 1

[node name="lobby_name_input" type="LineEdit" parent="center_menu/menu_buttons"]
margin_top = 99.0
margin_right = 200.0
margin_bottom = 117.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Room Interio"
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="lobby_addr_prompt" type="Label" parent="center_menu/menu_buttons"]
margin_top = 132.0
margin_right = 200.0
margin_bottom = 150.0
text = "Lobby IP Address"
align = 1

[node name="lobby_addr_input" type="LineEdit" parent="center_menu/menu_buttons"]
margin_top = 165.0
margin_right = 200.0
margin_bottom = 183.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "0.0.0.0"
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="create_or_join" type="HBoxContainer" parent="center_menu/menu_buttons"]
margin_top = 198.0
margin_right = 200.0
margin_bottom = 228.0

[node name="create_lobby" type="Button" parent="center_menu/menu_buttons/create_or_join"]
margin_right = 98.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.172549, 0.172549, 0.627451, 1 )
custom_styles/hover = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "Create"

[node name="join_lobby" type="Button" parent="center_menu/menu_buttons/create_or_join"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Join"

[node name="lobby_details_popup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = -120.5
margin_top = -30.0
margin_right = 120.5
margin_bottom = 30.0
rect_min_size = Vector2( 0, 120 )
theme = ExtResource( 6 )
window_title = "Input Lobby Details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby_popup_center" type="CenterContainer" parent="lobby_details_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby_size_input" type="VBoxContainer" parent="lobby_details_popup/lobby_popup_center"]
margin_left = 20.0
margin_top = 62.0
margin_right = 220.0
margin_bottom = 298.0
custom_constants/separation = 10

[node name="player_no_prompt" type="Label" parent="lobby_details_popup/lobby_popup_center/lobby_size_input"]
margin_right = 200.0
margin_bottom = 18.0
text = "How many players?"
align = 1

[node name="player_no_input" type="HBoxContainer" parent="lobby_details_popup/lobby_popup_center/lobby_size_input"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 58.0

[node name="less_occupy" type="CenterContainer" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )

[node name="less" type="Button" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input/less_occupy"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
custom_styles/hover = SubResource( 15 )
text = "-"

[node name="player_no" type="Label" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input"]
margin_left = 34.0
margin_top = 1.0
margin_right = 166.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 14 )
text = "2"
align = 1
valign = 1

[node name="more_occupy" type="CenterContainer" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input"]
margin_left = 170.0
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )

[node name="more" type="Button" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input/more_occupy"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
custom_styles/hover = SubResource( 16 )
text = "+"

[node name="play_area_prompt" type="Label" parent="lobby_details_popup/lobby_popup_center/lobby_size_input"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 86.0
text = "Select Area Layout"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="set_play_area" type="HBoxContainer" parent="lobby_details_popup/lobby_popup_center/lobby_size_input"]
margin_top = 96.0
margin_right = 200.0
margin_bottom = 196.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( -354, -19 )
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="left_space" type="CenterContainer" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area"]
margin_right = 21.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="play_area_prev" type="TextureButton" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area/left_space"]
margin_top = 30.0
margin_right = 20.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 40 )
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="play_area_preview" type="TextureRect" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area"]
margin_left = 25.0
margin_right = 175.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_space" type="CenterContainer" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area"]
margin_left = 179.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="play_area_next" type="TextureButton" parent="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area/right_space"]
margin_top = 30.0
margin_right = 20.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 40 )
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
expand = true

[node name="create_game" type="Button" parent="lobby_details_popup/lobby_popup_center/lobby_size_input"]
margin_top = 206.0
margin_right = 200.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.172549, 0.172549, 0.627451, 1 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Create"

[node name="name_popups" type="Control" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_name_alert" type="AcceptDialog" parent="name_popups"]
visible = true
margin_right = 83.0
margin_bottom = 58.0
mouse_filter = 2
window_title = "Name Not Entered"
dialog_text = "You must enter a name."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="illegal_character_alert" type="AcceptDialog" parent="name_popups"]
visible = true
margin_right = 83.0
margin_bottom = 58.0
window_title = "Illegal Character Detected"
dialog_text = "Name must contain only standard letters, numbers, or spaces."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bad_lobby" type="AcceptDialog" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -61.0
margin_right = 580.0
window_title = "Lobby Not Found"
dialog_text = "This lobby is not available. Please enter  a different lobby or create a new one."

[node name="network_node" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="center_menu/menu_buttons/create_or_join/create_lobby" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="center_menu/menu_buttons/create_or_join/join_lobby" to="." method="_on_join_lobby_pressed"]
[connection signal="pressed" from="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input/less_occupy/less" to="." method="_on_less_pressed"]
[connection signal="pressed" from="lobby_details_popup/lobby_popup_center/lobby_size_input/player_no_input/more_occupy/more" to="." method="_on_more_pressed"]
[connection signal="pressed" from="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area/left_space/play_area_prev" to="." method="_on_play_area_prev_pressed"]
[connection signal="pressed" from="lobby_details_popup/lobby_popup_center/lobby_size_input/set_play_area/right_space/play_area_next" to="." method="_on_play_area_next_pressed"]
[connection signal="pressed" from="lobby_details_popup/lobby_popup_center/lobby_size_input/create_game" to="." method="_on_create_game_pressed"]
